--- a/CAN/FED/DND.html
+++ b/CAN/FED/DND.html
@@ -11,39 +11,45 @@
 		
 		<div class="column">    
 		<h1><img src="DND/FLAG.png" height="300"></h1>
-		<h2>Department of National Defence</br>Ministère de la Défense nationale</h2>
+		<h2>Canadian Armed Forces</br>Forces armées canadiennes</h2>
 		</div>
 	
 		<div class="column"><a href="../FED.html">BACK to Canadian Federal Agencies</a></div>
 			
 	</div>
 	
+		<!-- <br> -->
+		The CAF is the unified military forces of Canada, including sea, land, and air commands as the Royal Canadian Navy, Canadian Army and the Royal Canadian Air Force, respectively.<br>Personnel may belong to either the Regular Force or the Reserve Force, which has four sub-components: the Primary Reserve, Supplementary Reserve, Cadet Organizations Administration and Training Service, and the Canadian Rangers. The CAF operates several other commands, including Canadian Forces Intelligence Command, Canadian Joint Operations Command, and Canadian Special Operations Forces Command. 
+		<br></br>
+	
   </head>
   <body>
 
 	<div class="row">
-		 
-		 <div class="column2">
-			<a href="DND/MP.html"><img src="DND/MPM/BADGE.png" height="200"><br>Military Police Militaire</a><br><br>
-		</div>
-		
-		 <div class="column2">
-			<a href="DND/Fire.html"><img src="DND/Fire/BADGE.png" height="200"><br>DND/MND Fire Service D'Incendie</a><br><br>
-		</div>		
-	</div>
-	
-	<div class="row">
 		<div class="column">
-			<a href="DND/Army.html"><img src="DND/ARMY.png" height="200"><br>Canadian Army<br>Armée canadienne</a></br>
+			<a href="DND/Army.html"><img src="DND/ARMY.png" height="200"><br>Canadian Army<br>Armée canadienne</a><br></br>
 		</div>
 		
 		<div class="column">
-			<!-- <a href="DND/RCN.html"> --><img src="DND/NAVY.png" height="200"><br>Royal Canadian Navy<br>Marine royale canadienne</a></br>
+			<img src="DND/NAVY.png" height="200"><br>Royal Canadian Navy<br>Marine royale canadienne</a><br></br>
 		</div>	
 				
 		<div class="column">
-			<!-- <a href="DND/RCAF.html"> --><img src="DND/RCAF.png" height="200"><br>Royal Canadian Air Force<br>Aviation royale canadienne</a></br>
-		</div>		
+			<img src="DND/RCAF.png" height="200"><br>Royal Canadian Air Force<br>Aviation royale canadienne</a><br></br>
+		</div>	
+	
+	</div>
+	
+	<div class="row">
+		 
+		 <div class="column2">
+			<a href="DND/MP.html"><img src="DND/MPM/BADGE.png" height="200"><br>Military Police Militaire</a><br></br>
+		</div>
+		
+		 <div class="column2">
+			<a href="DND/Fire.html"><img src="DND/Fire/BADGE.png" height="200"><br>DND/MND Fire Service D'Incendie</a><br></br>
+		</div>
+		
 	</div>
 	
 </body>
