--- a/CAN/FED/PPS.html
+++ b/CAN/FED/PPS.html
@@ -10,14 +10,17 @@
 		<div class="column"><a href="../../CAN/CAN.html">BACK to Canada</a></div>
 		
 		<div class="column">    
-		<h1><img src="PPS/080653.jpg" height="350"></h1>
+		<h1><img src="PPS/080653.jpg" height="350" crop="60,0,0,0"></h1>
 		<h2>Parliamentary Protective Service</br>Service de Protection Parlementaire</h2>
 		</div>
 	
 		<div class="column"><a href="../FED.html">BACK to Canadian Federal Agencies</a></div>
-		
-		
+				
 	</div>
+		
+		<!-- <br> -->
+		The PPS is the office of the Parliament of Canada which provides physical security within the Parliamentary Precinct in Ottawa, Ontario.<br>The PPS is <b>not</b> a law enforcement agency, and its officers are not peace officers. They are, however, public officers which allows them to be exempt from various weapon restrictions.
+		<br></br>
 	
   </head>
   <body>
