--- a/CAN/FED/RCMP.html
+++ b/CAN/FED/RCMP.html
@@ -16,6 +16,9 @@
 			<h1><img src="RCMP/01391b2ef4.jpg" height="400"></h1>
 		</div>
 		<h2>Royal Canadian Mounted Police</br>Gendarmerie royale du Canada</h2>
+		<!-- <br> -->
+		The RCMP is an agency of the Government of Canada and the national police service of Canada; it also provides police services under contract to 11 provinces and territories, over 150 municipalities, and 600 Indigenous communities.<br>Under its federal mandate, the RCMP is responsible for enforcing federal legislation, investigating inter-provincial and international crime, border integrity, overseeing Canadian peacekeeping missions involving police, managing the Canadian Firearms Program, and the Canadian Police College, which provides police training to Canadian and international police services.
+		<br></br>
 
 	<div class="row">
 
