--- a/CAN/Provinces/AB/AHS.html
+++ b/CAN/Provinces/AB/AHS.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1><img src="AHS/ambulanceredesign.jpg" height="400"></h1><h2>Alberta Health Services</h2>
+	
+	<!-- <br> -->
+	AHS is the single health authority for the Canadian province of Alberta and the largest integrated provincial health care system in Canada. Headquartered in Edmonton, AHS delivers medical care on behalf of the Government of Alberta's Ministry of Health. It operates 850 facilities throughout the province, including hospitals, clinics, continuing care facilities, mental health facilities and community health sites, that provide a variety of programs and services.
+	<br></br>
 
 	<div class="row">
 		 
