--- a/CAN/Provinces/AB/CFD.html
+++ b/CAN/Provinces/AB/CFD.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1><img src="YYC/CFD/337efff553.jpg" height="400"></h1><h2>Calgary Fire Department</h2>
+	
+	<!-- <br> -->
+	The Calgary Fire Department provides fire protection services for the city of Calgary. As of October 2024, the department has 45 stations. The departments employs over 1,500 personnel in both operational and support roles
+	<br></br>
 
 	<div class="row">
 
