--- a/CAN/Provinces/AB/CPS.html
+++ b/CAN/Provinces/AB/CPS.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="YYC/CPS/8539559f11.jpg" height="300"></h1><h2>Calgary Police Service</h2>
 
+	<!-- <br> -->
+	CPS is the municipal police service of the City of Calgary. It is the largest municipal police service in Alberta and third largest municipal force in Canada behind the <a href="../ON/Toronto/TPS.html">Toronto Police Service</a> and the <a href="../QC/MTL/Police.html">Montreal Police Service</a>.
+	<br></br>
+
 	<div class="row">
 		 
 		<div class="column"><a href="YYC/CPS/42c06e27c9.jpg"><img src="YYC/CPS/42c06e27c9.jpg" width="90%"></a></br></div>
