--- a/CAN/Provinces/AB/Sheriff.html
+++ b/CAN/Provinces/AB/Sheriff.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1><img src="Sheriff/Charger_Vingette.jpg" height="400"></h1><h2>Alberta Sheriffs Branch</h2>
+	
+	<!-- <br> -->
+	The Sheriffs Branch is a provincial law enforcement agency of the province of Alberta. Under the authority of the Peace Officer Act, Alberta Sheriffs are provincial peace officers with jurisdiction over the province of Alberta. The Alberta Sheriffs Branch is the largest sheriff service in Canada and de facto provincial police of Alberta. The Sheriffs Branch is also responsible for Commercial Vehicle Enforcement under the Highway Patrol Division; and absorbed the Fish and Wildlife Enforcement Service in 2020.
+	<br></br>
 
 	<div class="row">
 		 
