--- a/CAN/Transport/Transit/CT.html
+++ b/CAN/Transport/Transit/CT.html
@@ -13,10 +13,16 @@
 		<div class="column"><a href="../../Provinces/AB/Calgary.html">BACK to Calgary</a></div>
 		
 		<div class="column">
-		<h1><img src="CT/83c94cde6.jpg" height="300"></h1><h2>Calgary Transit Protective Services</h2>
+		<h1><img src="CT/83c94cde6.jpg" height="300"></h1><h2>Calgary Transit Safety and Enforcement Section</h2><!-- (formerly the Calgary Transit Protective Services) -->
 		</div>
-
+		
 		<div class="column"><a href="../Transit.html">BACK to Transit</a></div>
+		
+		<div class="column0">
+			<!-- <br> -->
+			The Public Safety and Enforcement Section is the enforcement agency for Calgary Transit. Formed in 1981, as special constables under the Police Act of Alberta, special constables had most authorities given to regular police constables.<br>In 2008, the new Peace Officer Act replaced the old police act. Officers were then renamed as "peace officers" under this act and given full peace officer powers in the province of Alberta.
+			<br></br>
+		</div>
 
 	</div>
    
