--- a/USA/State/CA/LA.html
+++ b/USA/State/CA/LA.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		 
 		<div class="column">
-			<a href="LA/LASD.html"><img src="LA/LASD/BADGE.png" height="300"><br>Los Angeles Sheriff Department</a><br><br>
+			<a href="LA/LASD.html"><img src="LA/LASD/MBADGE.png" height="300"><br>Los Angeles Sheriff Department</a><br><br>
 		</div>
 		
 		<div class="column">
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="column">
-			<a href="LA/LAPD.html"><img src="LA/LAPD/BADGE.png" height="300"><br>Los Angeles Police Department</a><br><br>
+			<a href="LA/LAPD.html"><img src="LA/LAPD/MBADGE.png" height="300"><br>Los Angeles Police Department</a><br><br>
 		</div>
 		
 	</div>
@@ -43,7 +43,11 @@
 	<div class="row">
 		 
 		<div class="column">
-			<a href="SMPD.html"><img src="SanMon/BADGE.png" height="300"><br>Santa Monica Police Department</a><br><br>
+			<a href="LA/SMPD.html"><img src="LA/SanMon/Police/BADGE.png" height="300"><br>Santa Monica Police Department</a><br><br>
+		</div>
+		 
+		<div class="column">
+			<img src="LA/SanMon/Fire/BADGE.png" height="300"><br>Santa Monica Fire Department</a><br><br>
 		</div>
 		
 		<!-- <div class="column"> -->
