--- a/USA/State/CA/LA/LACoFD.html
+++ b/USA/State/CA/LA/LACoFD.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="LACoFD/8e3e2e1939.jpg" height="400"></h1><h2>Los Angeles County Fire Department</h2>
 
+		<!-- <br> -->
+		LACoFD (LA County Fire) provides firefighting and emergency medical services for the unincorporated parts of Los Angeles County, California, as well as 59 cities through contracting, including the city of La Habra,[4] which is located in Orange County and is the first city outside of Los Angeles County to contract with LACoFD. As of 2021, the department is responsible for just over 4 million residents spread out in over 1.2 million housing units across an area of 2,305 square miles. LACoFD is the fourth busiest department in the United States, behind <a href="../../NY/NYC.html">New York City Fire Department</a>, <a href="../../IL/Chicago.html">Chicago Fire Department</a>, and <a href="LAFD.html">Los Angeles City Fire Department</a>.
+		<br></br>
+		
 	<div class="row">
 		 
 		<div class="column">
