--- a/USA/State/CA/LA/LAFD.html
+++ b/USA/State/CA/LA/LAFD.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="LAFD/76116147f0.jpg" height="400"></h1><h2>Los Angeles City Fire Department</h2>
 
+		<!-- <br> -->
+		The LAFD or LA City Fire Department provides firefighting services and technical rescue services, hazardous materials services, and emergency medical services to the residents of the city of Los Angeles, California, United States. The LAFD is responsible for approximately four million people who live in the agency's 471 square miles jurisdiction. The Los Angeles Fire Department was founded in 1886 and is the third largest municipal fire department in the United States. Only the <a href="../../NY/NYC.html">New York City Fire Department</a> and the <a href="../../IL/Chicago.html">Chicago Fire Department</a> are larger.
+		<br></br>
+		
 	<div class="row">
 		 
 		<div class="column">
