--- a/USA/State/CA/LA/LAPD.html
+++ b/USA/State/CA/LA/LAPD.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="LAPD/6ec45bf73d.jpg" height="400"></h1><h2>Los Angeles Police Department</h2>
 
+		<!-- <br> -->
+		The LAPD is the primary law enforcement agency of Los Angeles, California, United States. With 8,832 officers and 3,000 civilian staff, it is the third-largest municipal police department in the United States, after the<a href="../../NY/NYC/NYPD.html">New York Police Department</a>, and the  <a href="../../IL/Chicago.html">Chicago Police Department</a>.
+		<br></br>
+		
 	<div class="row">
 		 
 		<div class="column">
