--- a/USA/State/CA/LA/LASD.html
+++ b/USA/State/CA/LA/LASD.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="LASD/f38584a264.jpg" height="400"></h1><h2>Los Angeles Sheriff's Department</h2>
 
+		<!-- <br> -->
+		The LASD is a law enforcement agency serving <!-- <a href="../LA.html"> -->Los Angeles County<!-- </a> -->, <!-- <a href="../../CA.html"> -->California<!-- </a> -->. LASD is the largest sheriff's department in the United States and the third largest local police agency in the United States, following the <a href="../../NY/NYC/NYPD.html">New York Police Department</a>, and the  <a href="../../IL/Chicago.html">Chicago Police Department</a>. In addition to its primary responsibilities, LASD contracts with the Los Angeles Metropolitan Transportation Authority and Metrolink. 
+		<br></br>
+		
 	<div class="row">
 		 
 		<div class="column">
