--- a/USA/State/CA/LA/Lifeguard.html
+++ b/USA/State/CA/LA/Lifeguard.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="LACoFD/Lifeguard/3a5600bac6.jpg" height="400"></h1><h2>Los Angeles County Lifeguard</h2>
 
+		<!-- <br> -->
+		LA County Lifeguards is a division of the <a href="LACoFD.html">Los Angeles County Fire Department</a>. The lifeguard operations safeguard 31 miles of beach and 72 miles of coastline, from San Pedro in the south, to Malibu in the north.
+		<br></br>
+		
 	<div class="row">
 		 
 		<div class="column">
