--- a/USA/State/CA/LA/SMPD.html
+++ b/USA/State/CA/LA/SMPD.html
@@ -9,6 +9,10 @@
   <body>
     <h1><img src="SanMon/Police/e88e4b48f2.jpg" height="400"></h1><h2>Santa Monica Police Department</h2>
 
+		<!-- <br>
+		The CBSA is a federal law enforcement agency that is responsible for border control, immigration enforcement, and customs services in Canada. CBSA's Inland Enforcement branch tracks down and removes foreign nationals who are in Canada illegally. 
+		<br></br> -->
+		
 	<div class="row">
 		 
 		<div class="column">
