--- a/USA/State/IL/Chicago.html
+++ b/USA/State/IL/Chicago.html
@@ -6,7 +6,7 @@
     <title>Chicago</title>
   </head>
   <body>
-    <h1><img src="Cook/Chicago/LOGO.png" width="256"></h1><h2>City of Chicago</h2>
+    <h1><img src="Cook/Chicago/FLAG.png" width="256"></h1><h2>City of Chicago</h2>
 
 	<div class="row">
 	
