--- a/USA/State/IN-2.html
+++ b/USA/State/IN-2.html
@@ -60,6 +60,12 @@
 			<div class="column">
 				<img src="IN/Marion/Sheriff.png" height="80"><br>Marion County Sheriff</br>
 			</div>
+			<div class="column">
+				<img src="IN/Marion/Indianapolis/FLAG.png" height="80"><br>City of Indianapolis</br>
+				<div class="column0">
+					<img src="IN/Marion/Indianapolis/MBADGE.png" height="80"><br>Indianapolis Metro Police</br>
+				</div>
+			</div>
 		</div>
 		
 		<div class="column">
