--- a/USA/State/NV-2.html
+++ b/USA/State/NV-2.html
@@ -50,7 +50,7 @@
 			<img src="!Environment/NV/Agriculture.jpg" height="200"><br>Nevada Department of Agriculture<br>
 		</div>
 		<div class="column0">
-			<img src="!Parks/NV/BADGE.png" height="150"><img src="!Parks/NV/MBADGE.jpg" height="150"><br>Nevada State Parks Ranger<br>
+			<img src="!Parks/NV/BADGE.png" height="150"><br>Nevada State Parks Ranger<br>
 		</div>
 		
 		<div class="column0">
@@ -58,79 +58,82 @@
 		</div>
 		
 		<div class="column0">
-			<img src="NV/Uni/BADGE2.webp" height="150"><img src="NV/Uni/BADGE.jpg" height="150"><br>University of Nevada Police<br>
+			<img src="NV/Uni/BADGE2.webp" height="150"><img src="NV/Uni/BADGE.png" height="150"><br>University of Nevada Police<br>
 		</div>
 		
 	</div>
 	<div class="column23">
 
-		<div class="column">
-			<img src="NV/Carson City.png" height="200"><br>Carson City<br><br>
+		<div class="column2">
+			<img src="NV/Carson/SEAL.jpg" height="200"><br>Carson City<br>
+				<div class="column">
+					<img src="NV/Carson/Sheriff.jpg" height="80"><br>Carson City Sheriff's Office<br><br>
+				</div>
 		</div>
 		
-		<div class="column">
+		<div class="column2">
 			<img src="NV/Churchill.png" height="200"><br>Churchill County<br><br>
 		</div>
 		
 		<div class="column2">
-			<img src="NV/Clark/SEAL.png" height="100"><br>Clark County<br>
+			<img src="NV/Clark/SEAL.png" height="200"><br>Clark County<br>
 			<div class="column0">
 				<div class="column4">
-					<img src="NV/Clark/Police/DPS.jpg" height="80"><br>Clark County DPS<br><br>
+					<img src="NV/Clark/Police/DPS.png" height="80"><br>Clark County DPS<br><br>
 				</div>
 				<div class="column4">
 					<img src="NV/Clark/Fire.png" height="80"><br>Clark County Fire<br><br>
 				</div>
 				<div class="column4">
-					<img src="NV/Clark/Police/ParksPolice.jpg" height="80"><br>Clark County Parks Police<br><br>
+					<img src="NV/Clark/Police/ParksPolice.png" height="80"><br>Clark County Parks Police<br><br>
 				</div>
 				<div class="column4">
-					<img src="NV/Clark/Police/SchoolDistrict.jpg" height="80"><br>Clark County School District Police<br><br>
+					<img src="NV/Clark/Police/SchoolDistrict.png" height="80"><br>Clark County School District Police<br><br>
 				</div>
 			</div>
 			<div class="column2">
-				<img src="NV/Clark/LV/SEAL.png" height="60"><br>Las Vegas<br><br>
+				<img src="NV/Clark/LV/SEAL.png" height="80"><br>Las Vegas<br><br>
 				<div class="column">
 					<img src="NV/Clark/LV/LVMPD/BADGE.png" height="40"><br>Las Vegas Metropolitan Police Department<br><br>
 				</div>
 				<div class="column">
-					<img src="NV/Clark/LV/MarshalBADGE.jpg" height="40"><br>Las Vegas Marshal<br><br>
+					<img src="NV/Clark/LV/MarshalBADGE.png" height="40"><br>Las Vegas Marshal<br><br>
 				</div>
 				<!-- <div class="column"> -->
 					<!-- <img src="NV/Clark/Fire/Henderson.jpg" height="40"><br>Henderson Fire<br><br> -->
 				<!-- </div> -->
 			</div>
 			<div class="column2">
-				<img src="NV/Clark/Henderson.jpg" height="60"><br>Henderson<br><br>
+				<img src="NV/Clark/Henderson.jpg" height="80"><br>Henderson<br><br>
 				<div class="column2">
-					<img src="NV/Clark/Police/Henderson.jpg" height="40"><br>Henderson Police<br><br>
+					<img src="NV/Clark/Police/Henderson.png" height="40"><br>Henderson Police<br><br>
 				</div>
 				<!-- <div class="column2"> -->
 					<!-- <img src="NV/Clark/Fire/Henderson.jpg" height="40"><br>Henderson Fire<br><br> -->
 				<!-- </div> -->
 			</div>
 			<div class="column2">
-				<img src="NV/Clark/NorthLasVegas.jpg" height="60"><br>North Las Vegas<br><br>
+				<img src="NV/Clark/NorthLasVegas.jpg" height="80"><br>North Las Vegas<br><br>
 				<div class="column2">
-					<img src="NV/Clark/Police/NorthLasVegas.jpg" height="40"><br>North Las Vegas Police<br><br>
+					<img src="NV/Clark/Police/NorthLasVegas.png" height="40"><br>North Las Vegas Police<br><br>
 				</div>
 				<div class="column2">
 					<img src="NV/Clark/Fire/NorthLasVegas.jpg" height="40"><br>North Las Vegas Fire<br><br>
 				</div>
 			</div>
 			<div class="column2">
-				<img src="NV/Clark/Mesquite.jpg" height="60"><br>Mesquite<br><br>
+				<img src="NV/Clark/Mesquite.jpg" height="80"><br>Mesquite<br><br>
 				<div class="column2">
-					<img src="NV/Clark/Police/Mesquite.jpg" height="40"><br>Mesquite Police<br><br>
+					<img src="NV/Clark/Police/Mesquite.png" height="40"><br>Mesquite Police<br><br>
 				</div>
 				<!-- <div class="column2"> -->
 					<!-- <img src="NV/Clark/Fire/Mesquite.jpg" height="40"><br>Mesquite Fire<br><br> -->
 				<!-- </div> -->
 			</div>
 			<div class="column2">
-				<img src="NV/Clark/Boulder.jpg" height="60"><br>Boulder<br><br>
+				<img src="NV/Clark/Boulder.jpg" height="80"><br>Boulder<br><br>
 				<div class="column2">
-					<img src="NV/Clark/Police/Boulder.jpg" height="40"><br>Boulder Police<br><br>
+					<img src="NV/Clark/Police/Boulder.png" height="40"><br>Boulder Police<br><br>
 				</div>
 				<div class="column2">
 					<img src="NV/Clark/Fire/Boulder.jpg" height="40"><br>Boulder Fire<br><br>
