--- a/CAN/FED/CBSA.html
+++ b/CAN/FED/CBSA.html
@@ -15,6 +15,9 @@
 			<h1><img src="CBSA/05e34f9aef.jpg" height="350"></h1>
 		</div>
 		<h2>Canada Border Services Agency</br>Agence des services frontaliers du Canada</h2>
+		<!-- <br> -->
+		The CBSA is a federal law enforcement agency that is responsible for border control, immigration enforcement, and customs services in Canada. CBSA's Inland Enforcement branch tracks down and removes foreign nationals who are in Canada illegally.
+		<br></br>
   
     <div class="row">
 
