--- a/CAN/Provinces/AB/Airdrie.html
+++ b/CAN/Provinces/AB/Airdrie.html
@@ -7,18 +7,16 @@
 	<p ALIGN=LEFT ><a href="../AB.html">BACK</a></p>
   </head>
   <body>
-    <h1><img src="PO/Airdrie/AIRDRIE_Municipal_Enforcement.jpg" height="400"></h1><h2>City of Airdrie</h2>
+    <h1>City of Airdrie</h1>
 
 	<h3>Peace Officers</h3>
 	<div class="row">
 
- 		<div class="column4"><a href="PO/Airdrie/1286601514.jpg"><img src="PO/Airdrie/1286601514.jpg" width="90%"></a></br></div>
-
-		<div class="column4"><a href="../../../../911-DM/CAN/AB/Airdrie/PO/20210312_175100.jpg"><img src="../../../../911-DM/CAN/AB/Airdrie/PO/20210312_175100.jpg" width="90%"></a></br></div>
+ 		<div class="column"><a href="PO/Airdrie/1286601514.jpg"><img src="PO/Airdrie/1286601514.jpg" width="90%"></a></br></div>
 		
-		<div class="column4"><a href="../../../../911-DM/CAN/AB/Airdrie/PO/20210312_175109.jpg"><img src="../../../../911-DM/CAN/AB/Airdrie/PO/20210312_175109.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="PO/Airdrie/AIRDRIE_Municipal_Enforcement.jpg"><img src="PO/Airdrie/AIRDRIE_Municipal_Enforcement.jpg" width="90%"></a></br></div>
 
-		<div class="column4"><a href="PO/Airdrie/1286601546.jpg"><img src="PO/Airdrie/1286601546.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="PO/Airdrie/1286601546.jpg"><img src="PO/Airdrie/1286601546.jpg" width="90%"></a></br></div>
 		
 	</div>
 	
@@ -32,14 +30,6 @@
 		<div class="column"><a href="Airdrie/9c5d5db5be.jpg"><img src="Airdrie/9c5d5db5be.jpg" width="90%"></a></br></div>
 
 		
-	</div>
-	
-	<div class="row">
-		
-		<div class="column2"><a href="../../../../911-DM/CAN/AB/Airdrie/Fire/20210416_175603(0).jpg"><img src="../../../../911-DM/CAN/AB/Airdrie/Fire/20210416_175603(0).jpg" width="90%"></a></br></div>
-		
-		<div class="column2"><a href="../../../../911-DM/CAN/AB/Airdrie/Fire/20210416_175325.jpg"><img src="../../../../911-DM/CAN/AB/Airdrie/Fire/20210416_175325.jpg" width="90%"></a></br></div>
- 
 	</div>
 	
 </body>
