--- a/CAN/Provinces/AB/Calgary.html
+++ b/CAN/Provinces/AB/Calgary.html
@@ -12,16 +12,27 @@
 	<div class="row">
 		 
 		 <div class="column">
-			<a href="CPS.html"><img src="YYC/CPS/BADGE.png" height="200"><br>Calgary Police Service</a><br><br>
+			<a href="CPS.html"><img src="YYC/CPS/BADGE.png" height="200"><br>Calgary Police Service</a></br></br>
 		</div>
 		
 		<div class="column">
-			<a href="CFD.html"><img src="YYC/CFD/BADGE.png" height="200"><br>Calgary Fire Department</a><br><br>
+			<a href="CFD.html"><img src="YYC/CFD/BADGE.png" height="200"><br>Calgary Fire Department</a></br></br>
 		</div>
 		
 		<div class="column">
-			<a href="../../Transport/Transit/CT.html"><img src="../../Transport/Transit/CT/BADGE.png" height="200"><br>Calgary Transit Protective Services</a><br><br>
+			<a href="../../Transport/Transit/CT.html"><img src="../../Transport/Transit/CT/BADGE.png" height="200"><br>Calgary Transit Protective Services</a></br></br>
 		</div>	
+		
+		<div class="column">
+			<a href="../../Transport/Air/YYC.html"><img src="../../Transport/Air/YYC/BADGE.png" height="200"><br>Calgary International Airport</a></br></br>
+		</div>
+		<div class="column">
+			<img src="YYC/BylawBADGE.png" height="200"><br>City of Calgary Bylaw</br></br>
+		</div>
+		<div class="column">
+			<img src="YYC/UofC.png" height="200"><br>University of Calgary Campus Security</br></br>
+		</div>	
+		
 	</div>
 	
 </body>
